--- a/contents/config.yml
+++ b/contents/config.yml
@@ -1,6 +1,5 @@
-
-title: "🎓郑旭刚的主页. Xugang Zheng's homepage"
-page-top-title: "郑旭刚 (Xugang Zheng)"
-top-section-bg-text: "An LLM Designer and Efficient Machine Learning System Nerd"
-home-subtitle: 郑旭刚&ensp;|&ensp;Xugang Zheng
-copyright-text: '&copy; Xugang Zheng 2024. All Rights Reserved.'
+title: Congrui Yin's Homepage
+page-top-title: Congrui Yin (殷骢睿)
+top-section-bg-text: An LLM Designer and Efficient Machine Learning System Nerd
+home-subtitle: Congrui Yin&ensp;|&ensp;殷骢睿
+copyright-text: '&copy; Congrui Yin 2023. All Rights Reserved.'
